--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,13 +1,42 @@
 ---
    - name: Deploy JPetStore Docker container locally
-     hosts: localhost
+     hosts: local
      become: yes
      tasks:
+       - name: Install Docker
+         apt:
+           name: docker.io
+           state: present
+           update_cache: yes
+
+       - name: Install python3-pip
+         apt:
+           name: python3-pip
+           state: present
+           update_cache: yes
+
+       - name: Install Docker SDK for Python
+         pip:
+           name: docker
+           state: present
+           executable: pip3
+
+       - name: Start Docker service
+         service:
+           name: docker
+           state: started
+           enabled: yes
+
        - name: Add Jenkins user to docker group
          user:
            name: jenkins
            groups: docker
            append: yes
+
+       - name: Ensure old JPetStore container is removed
+         docker_container:
+           name: jpetstore
+           state: absent
 
        - name: Run JPetStore container
          docker_container:
