--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,8 +1,31 @@
 ---
    - name: Deploy JPetStore Docker container locally
-     hosts: localhost
+     hosts: local
      become: yes
      tasks:
+       - name: Remove conflicting containerd.io package
+         apt:
+           name:
+             - containerd.io
+             - containerd
+             - docker-ce
+             - docker-ce-cli
+           state: absent
+           purge: yes
+         ignore_errors: yes
+
+       - name: Clean up package cache
+         apt:
+           autoclean: yes
+           autoremove: yes
+         ignore_errors: yes
+
+       - name: Fix broken dependencies
+         apt:
+           name: "*"
+           state: fixed
+         ignore_errors: yes
+
        - name: Install Docker
          apt:
            name: docker.io
