--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,75 +1,80 @@
 ---
-   - name: Deploy JPetStore Docker container locally
-     hosts: localhost
-     become: yes
-     tasks:
-       - name: Remove conflicting containerd.io package
-         apt:
-           name:
-             - containerd.io
-             - containerd
-             - docker-ce
-             - docker-ce-cli
-           state: absent
-           purge: yes
-         ignore_errors: yes
+- name: Deploy JPetStore container locally
+  hosts: local
+  connection: local
+  become: yes
+  gather_facts: false
 
-       - name: Clean up package cache
-         apt:
-           autoclean: yes
-           autoremove: yes
-         ignore_errors: yes
+  vars:
+    docker_image: "markemadd/jpetstore:latest"
+    ansible_user: "mdev"
 
-       - name: Fix broken dependencies
-         apt:
-           name: "*"
-           state: fixed
-         ignore_errors: yes
+  tasks:
+    - name: Configure passwordless sudo for the user
+      become: true
+      lineinfile:
+        path: /etc/sudoers
+        line: "{{ ansible_user }} ALL=(ALL) NOPASSWD: ALL"
+        validate: '/usr/sbin/visudo -cf %s'
+      tags: sudo
 
-       - name: Install Docker
-         apt:
-           name: docker.io
-           state: present
-           update_cache: yes
+    - name: Clean up APT
+      apt:
+        autoclean: yes
+        autoremove: yes
+      ignore_errors: yes
 
-       - name: Install python3-pip
-         apt:
-           name: python3-pip
-           state: present
-           update_cache: yes
+    - name: Fix broken dependencies
+      apt:
+        name: "*"
+        state: fixed
+      ignore_errors: yes
 
-       - name: Install Docker SDK for Python
-         pip:
-           name: docker
-           state: present
-           executable: pip3
+    - name: Install Docker
+      apt:
+        name: docker.io
+        state: present
+        update_cache: yes
 
-       - name: Start Docker service
-         service:
-           name: docker
-           state: started
-           enabled: yes
-         register: docker_service
-         retries: 3
-         delay: 5
-         until: docker_service.state == "started"
+    - name: Install python3-pip
+      apt:
+        name: python3-pip
+        state: present
+        update_cache: yes
 
-       - name: Add Jenkins user to docker group
-         user:
-           name: jenkins
-           groups: docker
-           append: yes
+    - name: Install Docker SDK for Python
+      pip:
+        name: docker
+        state: present
+        executable: pip3
 
-       - name: Ensure old JPetStore container is removed
-         docker_container:
-           name: jpetstore
-           state: absent
+    - name: Start Docker service
+      service:
+        name: docker
+        state: started
+        enabled: yes
+      register: docker_service
+      retries: 3
+      delay: 5
+      until: docker_service.state == "started"
 
-       - name: Run JPetStore container
-         docker_container:
-           name: jpetstore
-           image: "{{ docker_image }}"
-           state: started
-           ports:
-             - "8080:8080"
-           restart_policy: always
+    - name: Add Jenkins user to docker group
+      user:
+        name: jenkins
+        groups: docker
+        append: yes
+
+    - name: Ensure old JPetStore container is removed
+      docker_container:
+        name: jpetstore
+        state: absent
+
+    - name: Run JPetStore container
+      docker_container:
+        name: jpetstore
+        image: "{{ docker_image }}"
+        state: started
+        ports:
+          - "8081:8080"
+        restart_policy: always
+
