--- a/deploy.yml
+++ b/deploy.yml
@@ -1,63 +1,26 @@
 ---
-- name: Deploy JPetStore container locally
+- name: Build and Run Docker Image for Java App
   hosts: localhost
-  connection: local
-  become: yes
-  gather_facts: false
-
-  vars:
-    docker_image: "markemadd/jpetstore:latest"
-    ansible_user: "mdev"
-
+  become: true
   tasks:
-    
 
-
-    - name: Install Docker
-      apt:
-        name: docker.io
-        state: present
-        update_cache: yes
-
-    - name: Install python3-pip
-      apt:
-        name: python3-pip
-        state: present
-        update_cache: yes
-
-    - name: Install Docker SDK for Python
-      pip:
-        name: docker
-        state: present
-        executable: pip3
-
-    - name: Start Docker service
-      service:
-        name: docker
-        state: started
-        enabled: yes
-      register: docker_service
-      retries: 3
-      delay: 5
-      until: docker_service.state == "started"
-
-    - name: Add Jenkins user to docker group
-      user:
-        name: jenkins
-        groups: docker
-        append: yes
-
+    - name: Build Docker image
+      community.docker.docker_image:
+        name: jpetstoreapp_image
+        tag: latest
+        source: build
+        build:
+          path: "{{ playbook_dir }}"
     - name: Ensure old JPetStore container is removed
       docker_container:
         name: jpetstore
         state: absent
-
-    - name: Run JPetStore container
-      docker_container:
-        name: jpetstore
-        image: "{{ docker_image }}"
+        
+    - name: Run Docker container
+      community.docker.docker_container:
+        name: jpetstoreapp_container
+        image: jpetstoreapp_image:latest
+        container_default_behavior: compatibility
         state: started
         ports:
-          - "8081:8080"
-        restart_policy: always
-
+          - "8080:8080"
